# ml_cli

./: .coverage  .coverage.Ayomides-Macbook-Pro.local.61005.XKOkFRTx  .coverage.Ayomides-Macbook-Pro.local.72681.XnEJPqmx  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  build_package.sh  ci-test.sh  coverage.xml  local_ci_runner.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test.py  test_api.py  test_api_predict.py
.github/workflows/: ci.yml
acme/: best_model_pipeline.py  config.yaml  eda_report.csv  goto_project.sh  main.py  requirements.txt  start_ml_project.sh
acme/output/: best_model_pipeline.py  feature_info.json
ml_cli/: cli.py
ml_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ml_cli/api/: main.py
ml_cli/commands/: clean.py  completion.py  eda.py  init.py  predict.py  preprocess.py  run.py  serve.py  train.py
ml_cli/config/: models.py
ml_cli/core/: data.py  predict.py  train.py
ml_cli/utils/: __init__.py  exceptions.py  utils.py
tests/: conftest.py  test_api.py  test_cli.py  test_commands.py  test_core_data.py
tests/integration/: test_integration_placeholder.py  test_workflow.py
